# learn_rust

./: .gitignore  Cargo.toml  README.md  chp4.rs  guessing_game.rs  main.rs  notes.md
adder/: Cargo.toml
adder/src/: lib.rs
src/: chp10-generics.rs  chp10-lifetimes.rs  chp10-traits.rs  chp12-minigrep_lib.rs  chp12-minigrep_main.rs  chp13-closures.rs  chp13-iterators-lib.rs  chp15-cyclical_references_main.rs  chp15-smart_pointers_lib.rs  chp15-smart_pointers_main.rs  chp15-weak_references.rs  chp16-concurrency.rs  chp17-oop-state-example_main.rs  chp17-oop_state_example_lib.rs  chp17-rusty-state-example.rs  chp17-rusty-state-example_lib.rs  chp18-pattern-syntax.rs  chp19-unsafe_rust.rs  chp3.rs  chp5.rs  chp6.rs  chp8.rs  chp8_exercises.rs  chp9.rs  lib.rs  main.rs
