[package]
name = "alpine_cosmodrome"
version = "0.1.0"
authors = ["Samuel Whiteley <sam@cosmicbagel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.8.3"

# [dependencies.terminal]
# version = "0.2.1"
# features = ["crossterm-backend"]

# [[bin]]
# name = "alpine_cosmodrome"
# path = "main.rs"
